# manifold

./: .gitignore  AUTOMATION.md  CHANGELOG.md  DOCS_INDEX.md  Dockerfile  FALLBACK_STORAGE_GUIDE.md  FINAL_STATS_AND_SUMMARY.md  FORM_SCRAPER_ADVANCED.md  FORM_SCRAPER_ADVANCED_SUMMARY.md  FORM_SCRAPER_API_REFERENCE.md  FORM_SCRAPER_ENHANCEMENT.md  FORM_SCRAPER_IMPROVEMENTS.md  IMPLEMENTATION_COMPLETE.md  LICENSE  NEW_FEATURES_SUMMARY.txt  PROFILE_GENERATOR_SETUP.md  QUICKSTART.md  QUICK_START_TESTING.md  RECENT_UPDATES.md  TAURI_FALLBACK_FIX.md  TAURI_PARAMETER_FIX.md  components.json  docker-compose.yml  login-test-report-login_test_3d0y3e4n.json  login-test-report-login_test_41481t28.json  login-test-report-login_test_4alyfgw0.json  login-test-report-login_test_5fdw6n9h.json  login-test-report-login_test_5lwt7oj0.json  login-test-report-login_test_5u4k7svw.json  login-test-report-login_test_ae2eoa9o.json  login-test-report-login_test_f9vkrphr.json  login-test-report-login_test_icyuefuc.json  login-test-report-login_test_l5phhcb5.json  login-test-report-login_test_l972y232.json  login-test-report-login_test_rrzyk4j1.json  package-lock.json  package.json  run.sh  tailwind.config.js  tsconfig.json  (+2 more)
ManifoldHub/: ContentView.swift  IMPLEMENTATION_SUMMARY.md  Info.plist  ManifoldHub.entitlements  ManifoldHubApp.swift  PROJECT_SETUP.md  Package.swift  README.md
evasions/: audio.ts  canvas.ts  client-hints.ts  fonts.ts  index.ts  navigator.ts  tls-bridge.ts  tls-grease.ts  types.ts  webgl.ts  webrtc.ts
human/: entropy.ts  index.ts
markdowns/: info.md  (+14 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  error.rs  fingerprint.rs  geo_validator.rs  human.rs  lib.rs  profile.rs  proxy.rs  tls_bridge.rs
src-tauri/tests/: form_scraper_integration.rs
(+94 files in other folders)
