[package]
name = "tauri-app"
version = "0.1.0"
description = "Manifold — hardened browser automation & fingerprint management"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell  = "2"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite — use bundled (no system dep); flip to bundled-sqlcipher-vendored-openssl
# for encrypted profiles once your CI has the required C build toolchain.
rusqlite = { version = "0.31", features = ["bundled"] }

uuid    = { version = "1",   features = ["v4", "serde"] }
chrono  = { version = "0.4", features = ["serde"] }
rand    = { version = "0.8", features = ["small_rng"] }
thiserror = "1"
anyhow    = "1"
dirs      = "5"
tokio     = { version = "1", features = ["full"] }

# TLS bridge for JA4 fingerprinting
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "0.26"
url = "2.5"

# Application-level encryption for sensitive fields (proxy creds, etc.)
aes-gcm  = "0.10"
argon2   = "0.5"
base64   = "0.22"
hex      = "0.4"

# Quantum-resistant hashing and entropy
blake3   = "1.5"
sha3     = "0.10"

# Form scraper dependencies
reqwest  = { version = "0.12", features = ["json"] }
scraper  = "0.19"
html5ever = "0.27"

[dev-dependencies]
tempfile = "3"

[features]
# Enable this feature to compile with real SQLCipher encryption.
# Requires a C compiler + OpenSSL headers (provided by vcpkg or bundled).
# sqlcipher = ["rusqlite/bundled-sqlcipher-vendored-openssl"]
